renderer: Ensure settings cog visible in IE9-11
Following on from I19e67ae4, IE9-11's treatment of SVG elements that
overflow their containers means that the truncating pseudo-element and
the settings cog is occluded in a portrait-mode preview.

"Pad" the extract horizontally using a margin to force the SVG element
into the correct position.

Bug: T156800
Bug: T139297

--- a/resources/ext.popups/styles/ext.popups.core.less
+++ b/resources/ext.popups/styles/ext.popups.core.less
@@ -109,8 +109,13 @@
 	}
 
 	.mwe-popups-extract {
-		margin: 0;
-		padding: 16px;
+
+		// T156800, T139297: "Pad" the extract horizontally using a margin so the
+		// SVG element is forced not to occlude the truncating pseudo-element and
+		// the settings cog in IE9-11.
+		padding: 16px 0;
+		margin: 0 16px;
+
 		display: block;
 		color: #000;
 		text-decoration: none;
